--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -103,6 +103,8 @@
         // Remove entries with empty rental_class_id
         const validMappings = deduplicatedMappings.filter(mapping => mapping.rental_class_id !== '');
 
+        console.log('Valid mappings to save:', validMappings);
+
         if (validMappings.length === 0) {
             alert('Error: No valid mappings to save. Please ensure all rows have a Rental Class ID.');
             return;
@@ -115,8 +117,12 @@
             },
             body: JSON.stringify(validMappings)
         })
-        .then(response => response.json())
+        .then(response => {
+            console.log('Save response:', response);
+            return response.json();
+        })
         .then(data => {
+            console.log('Save response data:', data);
             if (data.error) {
                 alert('Error: ' + data.error);
             } else {
@@ -134,6 +140,7 @@
     fetch('/categories/mapping')
         .then(response => response.json())
         .then(data => {
+            console.log('Loaded mappings:', data);
             data.forEach(mapping => addMappingRow(mapping));
         })
         .catch(error => {
