Add min-height to subcategory row and force reflow in expand.js (version 2025-04-25-v32)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -302,4 +302,10 @@ body {
     .filter-sort-controls select {
         width: 100%;
     }
+
+    .subcat-row {
+        min-height: 40px;
+        display: table-row !important;
+        visibility: visible !important;
+    }
 }
